feat: Update dependencies and build configuration
Updates the `@google/genai` dependency to use any version (`*`) and adjusts the `tsconfig.json` to include `node` types. Also, the `index.html` importmap for React is updated. These changes prepare the project for potential dependency upgrades and ensure proper type checking.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,7 +18,8 @@
     "baseUrl": ".",
     "paths": {
       "@/*": ["./*"]
-    }
+    },
+    "types": ["node"]
   },
   "include": ["**/*.ts", "**/*.tsx"],
   "exclude": ["node_modules"]
